--- a/src/Frontend-GNOME/Makefile.am
+++ b/src/Frontend-GNOME/Makefile.am
@@ -232,7 +232,8 @@ REFERENCES =  \
 	$(MESSAGINGMENU_SHARP_LIBS) \
 	$(MESSAGINGMENU_SHARP_INCLUDED_LIBS) \
 	$(NOTIFY_SHARP_LIBS) \
-	$(DBUS_LIBS)
+	$(DBUS_LIBS) \
+	$(XAMMAC_LIBS)
 
 DLL_REFERENCES = $(MESSAGINGMENU_SHARP_INCLUDED_LIBS) 
 
